--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,16 +1,14 @@
 {
-    "env": {
-        "browser": true,
-        "es2021": true
-    },
-    "extends": [
-        "standard"
-    ],
-    "parserOptions": {
-        "ecmaVersion": "latest",
-        "sourceType": "module"
-    },
-    "rules": {
-        "indent": ["error", 4]
-    }
+	"env": {
+		"browser": true,
+		"es2021": true
+	},
+	"extends": ["standard"],
+	"parserOptions": {
+		"ecmaVersion": "latest",
+		"sourceType": "module"
+	},
+	"rules": {
+		"indent": ["error", 4]
+	}
 }
